[workspace]
resolver = "2"
members = ["common", "server", "client", "db", "sim"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "time",
    "sync",
    "signal",
    "fs",
    "io-std",
] }
anyhow = "1"
bcrypt = "0.15"
uuid = { version = "1.8", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs"] }
common = { path = "common" }
db = { path = "db" }
