[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
futures-util = { workspace = true }
common = { workspace = true }
db = { workspace = true }
cpu-time = "1.0"

[dev-dependencies]
tokio-tungstenite = { workspace = true }
sysinfo = "0.32"
